2013-07-17  Albert Krewinkel  <albert@zeitkraut.de>

	* gnus-msg.el (gnus-configure-posting-style):
	Allow string replacements in values when matching against a header.

2014-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-dribble-read-file): Don't stop the auto-saving of
	the dribble buffer even when it is shrunk a lot.
	<http://thread.gmane.org/gmane.emacs.gnus.user/16923>

2014-06-26  Glenn Morris  <rgm@gnu.org>

	* mm-util.el (help-function-arglist): Remove outdated declaration.

2014-06-24  Andreas Schwab  <schwab@linux-m68k.org>

	* html2text.el (html2text-get-attr): Rewrite to handle spaces in quoted
	attribute values.  (Bug#17834)

2013-06-22  Dmitry Antipov  <dmantipov@yandex.ru>

	* gnus-sum.el (gnus-summary-edit-article-done):
	Prefer point-marker to copy-marker of point.

2014-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-el, install-el-elc): Compress .el files.
	(uninstall): Remove compressed .el files.

2014-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-edit-part): Don't modifiy markers.
	(gnus-article-read-summary-keys):
	Don't bug out when there is no article in the summary buffer.
	(gnus-mime-buttonize-attachments-in-header):
	Improve criterion that finds parts to display.

	* gnus-art.el (gnus-mm-display-part):
	* mm-decode.el (mm-shr):
	* mm-view.el (mm-inline-text-html-render-with-w3m, mm-inline-text)
	(mm-insert-inline): Revert last changes.

2014-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mm-display-part):
	* mm-decode.el (mm-shr):
	* mm-view.el (mm-inline-text-html-render-with-w3m, mm-inline-text)
	(mm-insert-inline): Set insertion type of end-marker, not only
	start-marker, of undisplayer so as to stay after inserted text.

2014-06-02  Andreas Schwab  <schwab@linux-m68k.org>

	* html2text.el (html2text-get-attr): Fix typo when splitting value from
	attribute. (Bug#17613)

2014-05-29  Stefan Monnier  <monnier@iro.umontreal.ca>
